User signup and login added
